# text-based-adventure

./: README.rst  pyproject.toml
tests/: test_text_based_adventure.py
text_based_adventure/: db.sqlite3  manage.py
text_based_adventure/templates/: base.jinja  home.jinja  profile.jinja  story.jinja
text_based_adventure/text_based_adventure/: asgi.py  settings.py  urls.py  wsgi.py
text_based_adventure/text_based_adventure/data/: rooms.py
text_based_adventure/text_based_adventure/pages/: forms.py  views.py
