[tool.poetry]
name = "text-based-adventure"
version = "0.1.0"
description = ""
authors = ["xentropy <claponsie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
Django = "^5.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
